syntax = "proto3";
package kratos.api;

option go_package = "github.com/staroffish/am/app/am-spider/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Etcd {
    repeated string end_points = 1;
    string user = 2;
    string password = 3;
    uint32 dial_timeout = 4;
  }
  message Redis {
    string addr = 1;
    string user = 2;
    string password = 3;
    int32 db = 4;
    int32 anime_magnet_timeout = 5;
    google.protobuf.Duration read_timeout = 6;
    google.protobuf.Duration write_timeout = 7;
  }
  Etcd etcd = 1;
  Redis redis = 2;
}

message SpiderParameter {
  string type = 1;
  string url = 2;
  string proxy = 3;
  string method = 4;
  string interval = 5;
  string user_agent = 6;
}

message Flags {
  string component_name = 1;
}
